--- a/index.html
+++ b/index.html
@@ -1,40 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="styles.css">
   <title>Frontend Mentor | FAQ Accordion Card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
+
 <body>
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on 
-  team members for the Premium plan.
+  <div class="card">
+    <div class="images">
+        <img class="img1" src="images/bg-pattern-desktop.svg" alt="">
+        <img class="img2" src="images/illustration-woman-online-desktop.svg" alt="">
 
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
-
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
-
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
-
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours.
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+      <img class="img3" src="images/illustration-box-desktop.svg" alt="">
+    </div>
+    <div class="faq-card">
+      <h1>FAQ</h1>
+      <div class="questions">
+        <h2>How many team members can I invite?<span class="arrow-key"><img src="images/icon-arrow-down.svg"
+              alt="arrow"></span></h2>
+        <p>You can invite up to 2 additional users on the Free plan. There is no limit on
+          team members for the Premium plan.</p>
+        <hr>
+      </div>
+      <div class="questions">
+        <h2>What is the maximum file upload size?<span class="arrow-key"><img src="images/icon-arrow-down.svg"
+              alt="arrow"></span></h2>
+        <p> No more than 2GB. All files in your account must fit your allotted storage space.
+        </p>
+        <hr>
+      </div>
+      <div class="questions">
+        <h2> How do I reset my password?<span class="arrow-key"><img src="images/icon-arrow-down.svg"
+              alt="arrow"></span>
+        </h2>
+        <p>Click “Forgot password” from the login page or “Change password” from your profile page.
+          A reset link will be emailed to you.</p>
+        <hr>
+      </div>
+      <div class="questions">
+        <h2>Can I cancel my subscription?<span class="arrow-key"><img src="images/icon-arrow-down.svg"
+              alt="arrow"></span></h2>
+        <p> Yes! Send us a message and we’ll process your request no questions asked.
+        </p>
+        <hr>
+      </div>
+      <div class="questions">
+        <h2> Do you provide additional support?<span class="arrow-key"><img src="images/icon-arrow-down.svg"
+              alt="arrow"></span>
+        </h2>
+        <p> Chat and email support is available 24/7. Phone lines are open during normal business hours.
+        </p>
+        <hr>
+      </div>
+    </div>
   </div>
+
+
+
+  <script src="app.js"></script>
+
+
 </body>
+
 </html>
