Complete FAQ challenge

--- a/index.html
+++ b/index.html
@@ -18,9 +18,15 @@
 <body>
   <div class="card">
     <div class="images">
-        <img class="img1" src="images/bg-pattern-desktop.svg" alt="">
+      <div class="xtr-img">
+        <div class="pattern">
+         <img class="img1" src="images/bg-pattern-desktop.svg" alt="">
+      </div>
+       
         <img class="img2" src="images/illustration-woman-online-desktop.svg" alt="">
 
+      </div>
+      
       <img class="img3" src="images/illustration-box-desktop.svg" alt="">
     </div>
     <div class="faq-card">
